examples/test/testpolicy6794.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6794
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key28: value6
      key23: value24
      key38: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value49
          key39: value47
          key15: value23
      podSelector:
        matchLabels:
          key20: value28
          key44: value5
